lib/src/compiler/tests/testdata/errors/18.out
error[E105]: number out of range
 --> line:5:8
  |
5 |     @a[0]
  |        ^ this number is out of the allowed range [1-9223372036854775807]
  |